--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,21 +1,23 @@
 version: '3.8'
+
 services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      -  db_data: /var/lib/postgresql/data/
+      - /var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
-    image: speedhash/yamdb_final:latest
+    image: anastasiagugas/infra-web:latest
     restart: always
     volumes:
       - static_value:/app/static/
-      - media_value:/app/media/ 
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
       - ./.env
+
   nginx:
     image: nginx:1.21.3-alpine
     ports:
@@ -26,7 +28,7 @@ services:
       - media_value:/var/html/media/
     depends_on:
       - web
+
 volumes:
   static_value:
   media_value:
-  db_data:
